# AtomWallets

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libatomconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
contrib/: README.md  atom-cli.bash-completion  atom-qt.pro  atom-tx.bash-completion  atomd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  atom-conf.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  instantsend.md  masternode-budget.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  atom-cli.1  atom-qt.1  atom-tx.1  atom-wallet.1  atomd.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  amount.h  atom-cli-res.rc  atom-tx-res.rc  atom-wallet-res.rc  atomd-res.rc  bip39_english.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  chainparams.cpp  chainparams.h  hash.h  init.h  (+24 more)
(+435 files in other folders)
