dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=atomd.1
endif

if ENABLE_QT
  dist_man1_MANS+=atom-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=atom-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=atom-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=atom-wallet.1
endif
endif
